[package]
name = "pbbot_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
rusqlite = { version = "0.26.0", features = ["bundled"] }
typemap_rev = "0.1.5"
anyhow = "1.0.44"

[profile.release]
lto = "fat"
codegen-units = 1