[package]
name = "pbbot_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.26.0", features = ["bundled"] }
typemap_rev = "0.1.5"
anyhow = "1.0.44"
log4rs = "1.3.0"
log = "0.4.21"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.12"

[profile.release]
lto = "fat"
codegen-units = 1
